SetRenderer context error not solved yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="boton_foto">Tomar Foto</string>
     <string name="boton_agregar_xml">Add XML</string>
     <string name="progreso">Progreso...</string>
+    <string name="btn_OpenGL">Foto</string>
+    <string name="distorcion">Distorcion</string>
 </resources>
 
 
